[gd_scene load_steps=2 format=3 uid="uid://k52s76musmbr"]

[ext_resource type="Script" uid="uid://benifso7efdrw" path="res://ui/game/hud/character_hud.gd" id="1_6op8q"]

[node name="CharacterHUD" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_6op8q")

[node name="CharacterButton" type="Button" parent="."]
custom_minimum_size = Vector2(90, 35)
layout_mode = 0
offset_left = 967.0
offset_top = 595.0
offset_right = 1057.0
offset_bottom = 630.0
text = "Character"

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(350, 300)
layout_mode = 0
offset_left = 401.0
offset_top = 175.0
offset_right = 751.0
offset_bottom = 475.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(290, 30)
layout_mode = 2
text = "Character"

[node name="ContentRow" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(330, 255)
layout_mode = 2
theme_override_constants/separation = 8

[node name="StatsScroll" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/ContentRow"]
custom_minimum_size = Vector2(330, 255)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="StatsText" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer/ContentRow/StatsScroll"]
z_index = 200
custom_minimum_size = Vector2(330, 255)
layout_mode = 2
fit_content = true

[node name="TooltipPanel" type="Panel" parent="."]
z_index = 500
custom_minimum_size = Vector2(320, 180)
layout_mode = 0
mouse_filter = 1

[node name="Margin" type="MarginContainer" parent="TooltipPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TooltipText" type="RichTextLabel" parent="TooltipPanel/Margin"]
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
fit_content = true
